welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:3: error: type mismatch;
 found   : Unit
 required: Boolean
   if (nums(i) = value){
               ^indexOfMaxValue:2: error: type mismatch;
 found   : Unit
 required: Int
 for (i <- 0 to nums.length-1) {
        ^