welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfMaxValue(nums:Array[Int] ,value:Int): Int = {
 for (i <- 0 to nums.length-1) {
   if (nums(i) = value){
   	return i
   }else{ 
   	return -1
   }
}










	
}
